# scrabble-rs

./: .env  .gitignore  Cargo.toml  Procfile  bad_data.json  build.rs  package-lock.json  package.json  tsconfig.json
js/: app.js  index.ts  rack.js  scrabble.js
migrations/: 20211211230013_users.sql  20211214041522_games.sql  20211224205609_player_index.sql  20211224210428_index_game_state.sql
src/: dictionary.rs  main.rs  session.rs  users.rs  web.rs
src/scrabble/: mod.rs
templates/: game.html  index.html  layout.html  login.html  new_registration.html
