[package]
name = "scrabble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
axum = "*"
tokio = { version = "*", features = ["full"] }
# axum-channels = { git = "https://www.github.com/zvkemp/axum-channels" }
axum-channels = { path = "../axum-channels" }
askama = "0.10"
