[package]
name = "scrabble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_json = { version = "^1.0", features = ["raw_value"] }
axum = "*"
tokio = { version = "*", features = ["full"] }
# axum-channels = { git = "https://www.github.com/zvkemp/axum-channels" }
axum-channels = { path = "../axum-channels" }
askama = "0.10"
tracing-subscriber = { version = "*", features = ["env-filter"] }
tracing = "*"
sqlx = { version = "*", features = ["migrate", "postgres", "runtime-tokio-rustls"] }
