[package]
name = "scrabble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_json = { version = "^1.0", features = ["raw_value"] }
axum = { version = "^0.4.2", features = ["ws"] }
tokio = { version = "*", features = ["full", "tracing"] }
# axum-channels = { path = "../axum-channels" }
axum-channels = { git = "https://github.com/zvkemp/axum-channels" }
tower = "*"
askama = "0.10"
tracing-subscriber = { version = "*", features = ["env-filter"] }
tracing = "*"
bcrypt = "*"
sqlx = { version = "*", features = ["migrate", "postgres", "runtime-tokio-rustls", "json"] }
hmac = "*"
cookie = { version = "^0.15", features = ["secure"] }
reqwest = "*"
dotenv = "*"
lazy_static = "*"
console-subscriber = "*"
